# mcp-connector

./: README.md  implementation_summary.md
.amazonq/: mcp.json
.amazonq/rules/: python.md  react.md
.kiro/: README.md
.kiro/specs/assistant-chat-interface/: design.md  requirements.md  tasks.md
.kiro/specs/chinese-input-handling/: design.md  requirements.md  tasks.md
.kiro/steering/: api-integration-guide.md  backend-development-guide.md  database-schema-guide.md  deployment-guide.md  development-standards.md  frontend-development-guide.md  mcp-integration-guide.md  project-overview.md
backend/: .env.example  README.md  TODO.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/v1/: api_keys.py  assistants.py  health.py  mcp_servers.py  mcp_tools.py  my_assistants.py  openai_compatible.py  server_groups.py  sessions.py
backend/app/core/: agent_manager.py  auth.py  built_in_tools.py.txt  mcp_manager.py  mcp_wrapper.py  mcp_wrapper.py.txt  session_manager.py  session_manager.py.txt
backend/app/db/: api_key_queries.py  assistant_queries.py  connection.py  queries.py
backend/app/models/: api_key.py  assistant.py  database.py  mcp_tool.py  server_group.py
backend/app/utils/: datetime_utils.py
backend/scripts/: create_admin_key.py  init_db.py  migrate_tool_group_relation.py  test_openai_api.py  test_session_api.py
backend/tests/: api.rest  conftest.py  test_health.py
frontend/: .bunfig.toml  .env.example  .prettierignore  README.md  TODO.md  package.json  start.sh
frontend/src/: App.tsx
frontend/src/components/: BatchImportModal.tsx
frontend/src/components/apiKeys/: ApiKeyCreatedModal.tsx  ApiKeyForm.tsx
frontend/src/components/chat/: AssistantSelector.tsx  ChatStyles.css  MessageBubble.tsx  MessageInput.tsx  MessageList.tsx
frontend/src/components/layout/: Layout.tsx
frontend/src/constants/: index.ts
frontend/src/hooks/: useAuth.ts  useMessage.ts  usePermissions.ts
frontend/src/pages/: ApiKeyCreate.tsx  ApiKeyDetail.tsx  ApiKeyEdit.tsx  ApiKeys.tsx  AssistantDetail.tsx  AssistantEdit.tsx  Assistants.tsx  Dashboard.tsx  Login.tsx  McpToolDetail.tsx  McpTools.tsx  ServerGroups.tsx
frontend/src/pages/chat/: ChatPage.tsx
frontend/src/services/: api.service.ts  apiKey.service.ts  assistant.service.ts  mcpServer.service.ts  mcpTool.service.ts
frontend/src/services/chat/: chatService.ts
frontend/src/types/: api.types.ts  apiKey.types.ts  assistant.types.ts
frontend/src/types/chat/: index.ts
plan/: database_schema.sql  project_discussion.md
